--- a/settings.gradle
+++ b/settings.gradle
@@ -4,5 +4,5 @@ include ':LocalRepo:emulatorview'
 include ':LocalRepo:term'
 include ':LocalRepo:p7zip'
 include ':LocalRepo:OpenCV'
-//include ':LocalRepo:PaddleOCR4Android'
-include ':paddleocr'
+include ':LocalRepo:PaddleOCR4Android'
+//include ':paddleocr'
